--- a/resources/css/pages/_home.scss
+++ b/resources/css/pages/_home.scss
@@ -416,7 +416,7 @@
                             justify-content: flex-end;
                             color: #000000;
                             font-weight: bold;
-                            margin-top: 5px;
+                            margin-top: 0px;
 
                             span:nth-child(2) {
                                 width: auto;
